--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+fastapi = "*"
 
 [dev-packages]
+uvicorn = "*"
 
 [requires]
 python_version = "3.12"
